Fixed the spacing 10B

--- a/individualTeamsMedia.css
+++ b/individualTeamsMedia.css
@@ -81,6 +81,10 @@
 	width: 100%;
 }
 
+.memberBox6 {
+	margin-bottom: 25%;
+}
+
 @media screen and (max-width: 415px) {
 	.eventButton button {
 		padding: 8px 8px;
